feat: Improve infrastructure error management
